--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nakgawa10.github.io/",
+  "homepage": "https://nakgawa10.github.io",
   "name": "my_portfolio",
   "version": "0.1.0",
   "private": true,
